# Private-Hosting-App

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  create-icons.js  package-lock.json  package.json  setup.bat  setup.sh  start.bat  start.sh  thinking.md  tsconfig.json
.github/workflows/: ci.yml  release.yml
apps/: docker-compose.yml
apps/backend-api/: .env.example  Dockerfile  package.json
apps/backend-api/data/: mc-hosting.db-shm
apps/backend-api/src/: auth.ts  database.ts  index.ts  rate-limiter.ts
apps/backend-api/test/: auth.test.ts  e2e.test.ts  rate-limiter.test.ts
apps/desktop-ui/: .env.example  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop-ui/public/: electron.js
apps/desktop-ui/src/: App.tsx  index.css
apps/desktop-ui/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-ui/src-tauri/capabilities/: default.json
apps/desktop-ui/src-tauri/icons/: icon.icns
apps/desktop-ui/src-tauri/src/: main.rs
apps/host-agent/: .env.example  package.json  tsconfig.json
apps/host-agent-rs/: Cargo.toml
apps/host-agent-rs/src/: ipc.rs  main.rs  proxy.rs
apps/host-agent/src/: auth-manager.ts  (+22 more)
apps/relay-service/: Dockerfile  package.json
data/: mc-hosting.db-shm
docs/: DEPLOYMENT.md  IMPLEMENTATION_PLAN.md  PRIVACY_POLICY.md  SUPABASE_SETUP.md  TERMS_OF_SERVICE.md  USER_GUIDE.md  index.html  script.js  style.css
public/: index.html
scripts/: benchmarks.js  build-installer.bat  build-installer.sh  e2e-smoke-test.js  installer-config.iss  load-test.js  relay-load-test.js
supabase/: schema.sql
(+35 files in other folders)
