[package]
name = "mc-relay-proxy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mc-relay-proxy"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
