[package]
name = "mc-hosting"
version = "0.2.0"
description = "MC Hosting - Minecraft Server Manager"
authors = ["MC Hosting Team"]
license = "MIT"
repository = "https://github.com/mchosting/app"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
